src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid_in_Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid in Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Misc. Receivables</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Credit__c</fullName>
        <label>Reason for Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Late Delivery</fullName>
                </value>
                <value>
                    <fullName>Incorrect invoice</fullName>
                </value>
                <value>
                    <fullName>Problem at the deposition</fullName>
                </value>
                <value>
                    <fullName>Payment Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                    <default>true</default>
                    <label>Payment</label>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Finance Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Payment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Payment_Item</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW()=false &amp;&amp; 
(ISCHANGED( Amount__c ) || ISCHANGED( Date__c )) &amp;&amp; 
(MONTH( PRIORVALUE(Date__c) ) &lt; MONTH(TODAY()) || YEAR(PRIORVALUE(Date__c)) &lt; YEAR(TODAY()) || MONTH( Date__c ) &lt; MONTH(TODAY()) || YEAR(Date__c) &lt; YEAR(TODAY()) ) 
) 
|| 
(ISNEW() &amp;&amp; 
(MONTH(Date__c) &lt; MONTH(TODAY()) || 
YEAR(Date__c) &lt; YEAR(TODAY())))</errorConditionFormula>
        <errorMessage>Payments cannot be applied or modified for prior months.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Payment_Type_Needed_for_Credits</fullName>
        <active>false</active>
        <description>When issuing a credit, there should not be a payment method listed.</description>
        <errorConditionFormula>ISPICKVAL(Type__c,&quot;Credit&quot;) &amp;&amp; 
NOT(ISBLANK(TEXT( Payment_Type__c)))</errorConditionFormula>
        <errorDisplayField>Payment_Type__c</errorDisplayField>
        <errorMessage>When issuing a credit, there should not be a payment method listed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISPICKVAL(Type__c,&quot;Credit&quot;))
&amp;&amp;
ISPICKVAL(Payment_Type__c,&quot;Credit Memo&quot;))</errorConditionFormula>
        <errorDisplayField>Payment_Type__c</errorDisplayField>
        <errorMessage>Payment type is required for every payment except credits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_for_Credit</fullName>
        <active>true</active>
        <description>Please detail why a credit was issued.</description>
        <errorConditionFormula>ISPICKVAL(Type__c,&quot;Credit&quot;) &amp;&amp; 
ISBLANK(TEXT(Reason_for_Credit__c ))</errorConditionFormula>
        <errorDisplayField>Reason_for_Credit__c</errorDisplayField>
        <errorMessage>Please explain why this credit was issued.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_for_Misc_Receivables</fullName>
        <active>true</active>
        <description>Please detail why miscellaneous receivables were applied.</description>
        <errorConditionFormula>ISPICKVAL(Type__c,&quot;Misc. Receivables&quot;) &amp;&amp; 
ISBLANK( Notes__c  )</errorConditionFormula>
        <errorDisplayField>Notes__c</errorDisplayField>
        <errorMessage>Please explain why miscellaneous receivables were issued.</errorMessage>
    </validationRules>
</CustomObject>